--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,11 @@ body{
     padding: 0px;
 }
 
-.header-title{
+.header-title p{
     font-size: 18px;
     padding-top: 40px;
-    margin-bottom: 150px;
-
+    margin-bottom: 100px;
+    padding-left: 40px;
 }
 
 .calculator{
@@ -39,6 +39,7 @@ body{
     border: 2.5px solid rgb(75, 43, 97);
     border-radius: 10px;
     padding: 10px;
+    margin-bottom: 5rem;
     gap:6px;
 }
 
@@ -48,7 +49,7 @@ body{
     align-items: center;
     flex-direction: column;
     background-color: rgb(236, 187, 244);
-    padding: 15px 0px 15px 35px;
+    padding: 15px 0px 15px 55px;
     border-radius: 10px;
     min-height: 80px;
     max-width: 100%;
