--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,9 @@ body{
 #result{
     display: flex;
     justify-content: flex-end;
-    justify-content: flex-end;
+    align-items: flex-end;
+    word-break: break-all;
+    overflow: auto;
     padding-right: 15px;
     width: 100%;
     color: rgb(52, 37, 153);
